--- a/Changes
+++ b/Changes
@@ -1,5 +1,21 @@
 Revision history for Dancer-Template-Handlebars
 
 {{$NEXT}}
+ [API CHANGES]
 
-  - First version, unleashed on an unsuspecting world.
+ [BUG FIXES]
+
+ [DOCUMENTATION]
+
+ [ENHANCEMENTS]
+
+ [NEW FEATURES]
+
+ [STATISTICS]
+
+0.1.0 2014-03-14
+ - First version, unleashed on an unsuspecting world.
+
+ [STATISTICS]
+ - code churn: 8 files changed, 335 insertions(+), 1 deletion(-)
+
